// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableSearch is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      aria-label="aria-label"
      class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
      data-test-subj="test subject string"
      placeholder="Filter options"
      type="search"
      value=""
    />
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xlink="http://www.w3.org/1999/xlink"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <path
              d="M11.271 11.978l3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738z"
              id="search-a"
            />
          </defs>
          <use
            href="#search-a"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiSelectableSearch props defaultValue 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch"
      placeholder="Filter options"
      type="search"
      value="Mi"
    />
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xlink="http://www.w3.org/1999/xlink"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <path
              d="M11.271 11.978l3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738z"
              id="search-a"
            />
          </defs>
          <use
            href="#search-a"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
